unpackaged/main/default/objects/WOAPigs__c/fields/Specify_other_hospital_pens__c.field-meta.xml
<CustomField>
    <fullName>Specify_other_hospital_pens__c</fullName>
    <label>Specify other (hospital pens)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>