unpackaged/main/default/objects/WOAPigs__c/fields/Start_age__c.field-meta.xml
<CustomField>
    <fullName>Start_age__c</fullName>
    <label>Start age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>