unpackaged/main/default/objects/WOAPigs__c/fields/Start_weight__c.field-meta.xml
<CustomField>
    <fullName>Start_weight__c</fullName>
    <label>Start weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>