unpackaged/main/default/objects/WOAPigs__c/fields/Tail_lengths__c.field-meta.xml
<CustomField>
    <fullName>Tail_lengths__c</fullName>
    <label>Tail lengths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All undocked</fullName>
            </value>
            <value>
                <fullName>Docked (short)</fullName>
            </value>
            <value>
                <fullName>Docked (long)</fullName>
            </value>
            <value>
                <fullName>Mixed (short docked/long docked)</fullName>
            </value>
            <value>
                <fullName>Mixed (undocked/docked)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>