unpackaged/main/default/objects/WOAPigs__c/fields/Too_dirty_to_assess_body_mark__c.field-meta.xml
<CustomField>
    <fullName>Too_dirty_to_assess_body_mark__c</fullName>
    <label>Too dirty to assess (body mark)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>