unpackaged/main/default/objects/WOAPigs__c/fields/Too_dirty_to_assess_vulva_lesions__c.field-meta.xml
<CustomField>
    <fullName>Too_dirty_to_assess_vulva_lesions__c</fullName>
    <label>Too dirty to assess vulva lesions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>