unpackaged/main/default/objects/WOAPigs__c/fields/Total_number_of_finishing_pigs_on_farm__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_finishing_pigs_on_farm__c</fullName>
    <label>Total number of finishing pigs on farm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>