unpackaged/main/default/objects/WOAPigs__c/fields/Total_number_of_pigs_in_pens_1_5__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_pigs_in_pens_1_5__c</fullName>
    <label>Total number of pigs in pens 1 - 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>