unpackaged/main/default/objects/WOAPigs__c/fields/Unit_Type_dry_sows__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_dry_sows__c</fullName>
    <label>Unit Type dry sows</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>