unpackaged/main/default/objects/WOAPigs__c/fields/Unit_type_Finishing_Pigs__c.field-meta.xml
<CustomField>
    <fullName>Unit_type_Finishing_Pigs__c</fullName>
    <label>Unit type Finishing Pigs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free-range</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Outdoor reared</fullName>
            </value>
            <value>
                <fullName>Indoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>