unpackaged/main/default/objects/WOAPigs__c/fields/Were_there_any_sows_nose_ringed__c.field-meta.xml
<CustomField>
    <fullName>Were_there_any_sows_nose_ringed__c</fullName>
    <label>Were there any sows nose ringed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>