unpackaged/main/default/objects/WOAPigs__c/fields/WOA__c.field-meta.xml
<CustomField>
    <fullName>WOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOA</label>
    <referenceTo>WOA__c</referenceTo>
    <relationshipLabel>WOAPigs</relationshipLabel>
    <relationshipName>WOAPigs</relationshipName>
    <type>Lookup</type>
</CustomField>